[package]
name = "vstamp"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

#[[bin]]
#name = "vstamp-cli"
#path = "src/bin/cli.rs"

[[bin]]
name = "vstamp-server"
path = "src/bin/server.rs"

[dependencies]
atoi = "1.0.0"
bytes = "1.1.0"
once_cell = "1.12.0"
parking_lot = "0.12.1"
structopt = "0.3.26"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.13"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.2.2"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
